changed rubric to v3

--- a/app/views/blog_posts/ratings/_category_descriptions.html
+++ b/app/views/blog_posts/ratings/_category_descriptions.html
@@ -1,69 +1,64 @@
 <div class="hover-rubrics" style="display:none">
-
-    <div class="hover-rubric" id="overall">
-     <table  class="table">
+  <div class="hover-rubric" id="overall">
+    <table  class="table">
       <tbody>
       <tr>
-        <td>5</td><td>This post was one of the best posts on the website.</td>
+        <td>5</td><td>Fantastic</td>
       </tr>
       <tr>
-        <td>3</td><td> This is an average post.</td>
+        <td>3</td><td>Average</td>
       </tr>
       <tr>
-        <td>1</td><td>This post is far below average.</td>
+        <td>1</td><td>Bad</td>
       </tr>
       </tbody>
     </table> 
   </div>
 
-    <div class="hover-rubric" id="practical">
+  <div class="hover-rubric" id="practical">
     <table  class="table">
       <tbody>
       <tr>
-        <td>5</td><td>This research provides some highly important and relevant information that is new to some socially motivated job seekers. (Or moderately important information to a large proportion). </td>
+        <td>5</td><td> Highly important for 10%+ of users.</td>
       </tr>
       <tr>
-        <td>3</td><td> This research provides some moderately important and relevant information that is new to some socially motivated job seekers.</td>
+        <td>3</td><td> Somewhat important for 10% of users.</td>
       </tr>
       <tr>
-        <td>1</td><td>This research doesn't contains any novel, important or relevant information to socially motivated job seekers.</td>
-      </tr>
-      </tbody>
-    </table>
-    <p>Note:</p>
-      <ul>
-        <li>Information is meant broadly to include data, analysis and conceptual considerations.</li>
-        <li>Important and relevant is meant with respect to the goal of changing people's career decisions for the better.</li>
-      </ul>
-  </div>
-
-    <div class="hover-rubric" id="original">
-    <table  class="table">
-      <tbody>
-      <tr>
-        <td>5</td><td>This research provides some highly important and relevant information that is new to informed people in the effective altruism community.</td>
-      </tr>
-      <tr>
-        <td>3</td><td>This research provides some moderately important and relevant information that is new to informed people in the effective altruism community.</td>
-      </tr>
-      <tr>
-        <td>1</td><td>This research doesn't contains any novel, important or relevant information to informed people in the effective altruism community.</td>
+        <td>1</td><td>Not useful to users.</td>
       </tr>
       </tbody>
     </table>
   </div>
 
-    <div class="hover-rubric" id="persuasive">
+  <div class="hover-rubric" id="original">
     <table  class="table">
       <tbody>
       <tr>
-        <td>5</td><td>This research used the most appropriate evidence given the time available. The conclusions drawn are likely to be accurate and contained an appropriate level of qualification. Academic research was used appropriately where available (e.g. using reviews or multiple studies, regressions are treated with appropriate skepticism).</td>
+        <td>5</td><td>Highly important to experts.</td>
       </tr>
       <tr>
-        <td>3</td><td>This research used some relevant evidence, and was based on a reasonable process, though the conclusions may contain some errors and some conclusions may have been overstated.</td>
+        <td>3</td><td>Somewhat important to experts.</td>
       </tr>
       <tr>
-        <td>1</td><td>This research was based on a poor choice of evidence or used an unreliable process.</td>
+        <td>1</td><td>Not useful to experts.</td>
+      </tr>
+
+      </tbody>
+    </table>
+  </div>
+
+  <div class="hover-rubric" id="persuasive">
+    <table  class="table">
+      <tbody>
+      <tr>
+        <td>5</td><td>Conclusions well supported by evidence, appropriate range of evidence used. </td>
+      </tr>
+      <tr>
+        <td>3</td><td>Some evidence was missed, reasoning was unreliable, or conclusions are overstated.</td>
+      </tr>
+      <tr>
+        <td>1</td><td>Poor evidence or process was very unreliable.</td>
       </tr>
       </tbody>
     </table>
@@ -72,13 +67,13 @@
     <table  class="table">
       <tbody>
       <tr>
-        <td>5</td><td> The research and reasoning process is clearly flagged, such that it would be easy for a motivated user to check the reasoning. What is known based on the evidence, what is unknown and the author's personal opinions are clearly flagged. Promising lines of further work are flagged so that it would be easy for others to build upon.</td>
+        <td>5</td><td> Completely. The process is stated, checkable by a motivated user and easy to build upon.</td>
       </tr>
       <tr>
-        <td>3</td><td> The research process is fairly clear, though there are several steps that would be difficult to check or build upon. </td>
+        <td>3</td><td> Partially. Some steps may be difficult to check or aren’t explained.</td>
       </tr>
       <tr>
-        <td>1</td><td>  It's completely unclear how this research was carried out and how the conclusions were reached.</td>
+        <td>1</td><td>The research process is unclear.</td>
       </tr>
       </tbody>
     </table>
@@ -88,37 +83,36 @@
     <table  class="table">
       <tbody>
       <tr>
-        <td>5</td><td>The structure is highly clear. The writing is concise, accurate and easy to understand. The post is easy to skim. Unnecessary jargon or technical terminology is avoided, and new terms are clearly explained.</td>
+        <td>5</td><td>If the Heath Brothers wrote for GiveWell. Clearly distilled conclusion. Easy to skim. Simple language. No unneeded jargon.</td>
       </tr>
       <tr>
-        <td>3</td><td> This post has some important weak points in terms of structure and clarity, but is otherwise easy to understand.</td>
+        <td>3</td><td> May be hard to spot the main conclusions. Some convoluted language or jargon. </td>
       </tr>
       <tr>
-        <td>1</td><td>It's very hard to understand.</td>
+        <td>1</td><td>Complex philosophy paper.  Completed reading with little understanding of the take-aways or conclusions.</td>
       </tr>
       </tbody>
     </table>
   </div>
 
-    <div class="hover-rubric" id="engaging">
+  <div class="hover-rubric" id="engaging">
     <table  class="table">
       <tbody>
       <tr>
-        <td>5</td><td>This post is fun or memorable and motivating to read.</td>
+        <td>5</td><td>Gladwellian. Highly memorable and enjoyable to read.</td>
       </tr>
       <tr>
-        <td>3</td><td>This post is somewhat engaging, though not particularly memorable.</td>
+        <td>3</td><td> Average for internet blogs. Many users won’t make it to the end or remember it in a few days time. </td>
       </tr>
       <tr>
-        <td>1</td><td>This post is boring.</td>
+        <td>1</td><td>Boring or hard going.</td>
       </tr>
       </tbody>
     </table>
   </div>
 
-    <div class="hover-rubric" id="total">
-      <p> This score represents the average of the scores for "original", "voi", "expert voi", "process","transparent", "accessible", and "engaging".
-      It does not include the "overall" score.
-      </p>
+  <div class="hover-rubric" id="total">
+    <p> This score represents the average of the scores for everything except for "overall".
+    </p>
   </div>
 </div>
