--- a/app/views/blog_posts/ratings/_form.html.erb
+++ b/app/views/blog_posts/ratings/_form.html.erb
@@ -1,10 +1,10 @@
 <div class="rubric">
-  <div class="row">
-    <div class="col-md-8">
+  <div class="row header">
+    <div class="col-md-5">
       <h2> Article Feedback </h2>
     </div>
-    <div class="col-md-4">
-      <p> Please rate the following 1-5 </p>
+    <div class="col-md-7">
+      <p> Please rate the following 1-5.  Refer to our <a href="https://docs.google.com/document/d/1fsENXnt8w0EhQ4PbfZPMxejCOTzsxUOJ2QBj0BYHt28/edit?usp=sharing">Guidlines</a> for explanation.  </p>
     </div>
   </div>
   <%= form_for([@post, @rating]) do |f| %>
