--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,7 +8,7 @@
  *= require etk_applications
  *= require jquery-ui-1.8.17.custom
  *= require datepicker
- *= require dashboard
+ *= require dashboards
  *= require bootstrap3
  *= require layout
  *= require header2
