--- a/app/assets/stylesheets/blog.css.scss
+++ b/app/assets/stylesheets/blog.css.scss
@@ -217,11 +217,10 @@
 }
 
 .rubric{
-  background:#ececec;
-  border: 1px dashed #aaa;
+  background:#fff;
+  border: 1px solid #e8e8e8;
   margin: 0.3em 0 1em 0;
   padding: 1.5em 2em 1em 2em;
-  border-radius:0.5em;
   h2{
     margin-top:0px;
     margin-bottom:16px;
