--- a/app/views/blog_posts/show.html.haml
+++ b/app/views/blog_posts/show.html.haml
@@ -4,7 +4,7 @@
       = render @post
       .social-media-horizontal
         .row
-          - if current_user and current_user.has_role? :admin
+          - if current_user and can? :access, Rating
             .col-md-12.ratings
               - if @user_rating.nil?
                 = render :partial => "/blog_posts/ratings/form"
