--- a/app/views/blog_posts/show.html.haml
+++ b/app/views/blog_posts/show.html.haml
@@ -19,6 +19,6 @@
       - if can? :manage, @post
         .controls
           .manage_buttons
-            = link_to "Edit Post", edit_blog_post_path(@post), :class => 'btn btn-mini btn-default'
-            = link_to 'Delete', blog_post_path(@post), :confirm => "Are you sure you want to delete the post '#{@post.title}'?", :method => :delete, :class => 'btn btn-mini btn-danger'
+            = link_to "Edit Content", edit_admin_blog_post_path(@post), :class => 'btn btn-mini btn-default'
+            = link_to "Edit Pictures", edit_blog_post_path(@post), :class => 'btn btn-mini btn-default'
       = render :partial => "social_media"
