added website anonymous feedback feature

--- a/app/assets/stylesheets/blog.css.scss
+++ b/app/assets/stylesheets/blog.css.scss
@@ -249,6 +249,11 @@
       font-size:16px;
     }
   }
+  .anonymous-feedback{
+    background:orange;
+    margin-top:15px;
+    margin-bottom:15px;
+  }
   .btn{ 
     margin-top:13px;
     margin-left:8px;
