--- a/app/assets/stylesheets/blog.css
+++ b/app/assets/stylesheets/blog.css
@@ -174,6 +174,14 @@
   .rubric .btn {
     margin-top: 13px;
     margin-left: 8px; }
+  .rubric .anonymous-feedback {
+    margin-top:13px;
+    margin-bottom:18px;
+    padding-left:8px;
+  }
+  .rubric .anonymous-feedback .input{
+    margin-top:8px;
+  }
 
 .hover-rubric {
   width: 350px; }
