minor changes to form, blogpost.js may have compiled from coffeescript

--- a/app/views/blog_posts/ratings/_form.html.erb
+++ b/app/views/blog_posts/ratings/_form.html.erb
@@ -76,7 +76,7 @@
     <div class="row anonymous-feedback">
 
       <div class="col-md-4">
-        Make Feedback Anonymous <i class="fa fa-info-circle" id="feedback-privacy" data-toggle="popover" data-placement="top" data-title="Feedback Anonymity" data-content="All feedback is available for all website viewers.  However, selecting this box will mean that viewers will not be able to see your name along with your feedback.  Website admins will still be able to see it."></i>
+        Make Feedback Anonymous <i class="fa fa-info-circle" id="feedback-privacy" data-toggle="popover" data-placement="top" data-title="Feedback Anonymity" data-content="Viewers will see your feedback but not your name.  Website admins will still be able to see your name."></i>
       </div>
       <div class="col-md-1">
         <%= f.check_box :privacy %>
