--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -10,7 +10,7 @@
           <li><a href="/coaching/information">Information</a></li> 
           <li><a href="/coaching/application">Application</a></li> 
         </ul>
-        <ul> <li class="heading"><a href="/research">Research</a></li> </ul>
+        <ul> <li class="heading"><a href="/research/overview">Research</a></li> </ul>
         <ul>
           <li class="heading"> <a href="/members/overview">Supporters</a> <li>
           <li><a href="/members/overview">Members</a></li>
