--- a/app/assets/stylesheets/pages.css
+++ b/app/assets/stylesheets/pages.css
@@ -1,41 +1,51 @@
 .team .member {
-  margin: 28px 0 10px 0; }
-  .team .member img {
-    max-width: 300px;
-    max-height: 253px;
-    margin: auto;
-    display: block; }
-  .team .member .empty-picture {
-    height: 253px;
-    width: 200px; }
+  margin: 28px 0 10px 0;
+}
+.team .member img {
+  max-width: 300px;
+  max-height: 253px;
+  margin: auto;
+  display: block;
+}
+.team .member .empty-picture {
+  height: 253px;
+  width: 200px;
+}
 .team .name {
-  color: #45b4b3; }
+  color: #45b4b3;
+}
 .team h1 {
   color: #444;
   font-weight: 500;
   margin-bottom: 2px;
-  padding-bottom: 0px; }
+  padding-bottom: 0px;
+}
 
 .endorsements blockquote {
   margin-left: 30px;
   margin: 0 0 14px 30px;
   background: url("/assets/pages/testimonials/220-16.png") left top no-repeat, url("/assets/pages/testimonials/220-16r.png") bottom right no-repeat;
-  border-left: none; }
+  border-left: none;
+}
 .endorsements blockquote p {
   font-family: 'Muli', sans serif;
   font-size: 1.3em;
   font-weight: 300;
   line-height: 170%;
-  padding: 8px 20px; }
+  padding: 8px 20px;
+}
 .endorsements .position {
   font-family: 'Muli', sans serif;
   font-size: 1.1em;
-  color: #999; }
+  color: #999;
+}
 .endorsements .author {
   font-family: 'Muli', sans serif;
-  font-size: 1.7em; }
+  font-size: 1.7em;
+}
 .endorsements .endorsement {
-  padding: 35px 0px; }
+  padding: 35px 0px;
+}
 .endorsements img {
   float: left;
   margin-right: 12px;
@@ -44,85 +54,130 @@
   -webkit-border-radius: 30px;
   -moz-border-radius: 30px;
   opacity: 0.5;
-  margin-left: 7px; }
+  margin-left: 7px;
+}
 .endorsements hr {
-  border-top: 1px dotted #eee; }
+  border-top: 1px dotted #eee;
+}
 
 .coaching-navigation {
-  padding-right: 22px; }
-  .coaching-navigation h1 a {
-    color: white; }
-  .coaching-navigation h2 {
-    float: right;
-    margin-left: 50px;
-    margin-top: 25px;
-    font-size: 1.5em; }
-    .coaching-navigation h2 a {
-      color: rgba(255, 255, 255, 0.8); }
-      .coaching-navigation h2 a:hover {
-        color: white;
-        text-decoration: none; }
+  padding-right: 22px;
+}
+.coaching-navigation h1 a {
+  color: white;
+}
+.coaching-navigation h2 {
+  float: right;
+  margin-left: 50px;
+  margin-top: 25px;
+  font-size: 1.5em;
+}
+.coaching-navigation h2 a {
+  color: rgba(255, 255, 255, 0.8);
+}
+.coaching-navigation h2 a:hover {
+  color: white;
+  text-decoration: none;
+}
 
 .confirmation {
-  background: #aaa; }
+  background: #aaa;
+}
 
 .coaching-page .confirmation {
   background: rgba(255, 255, 255, 0.7);
   padding: 0.1em 2em 1em 2em;
   border-radius: 3px;
-  margin-bottom: 1.5em; }
-  .coaching-page .confirmation h1 {
-    font-size: 30px;
-    margin-top: 30px; }
+  margin-bottom: 1.5em;
+}
+.coaching-page .confirmation h1 {
+  font-size: 30px;
+  margin-top: 30px;
+}
 .coaching-page .back-large {
   padding: 38px 0 32px 0;
-  background: linear-gradient(45deg, rgba(34, 144, 175, 0.3), rgba(91, 198, 207, 0.3)); }
-  .coaching-page .back-large .img {
-    width: 97%;
-    text-align: center;
-    margin-top: 10px; }
-  .coaching-page .back-large .summary {
-    padding: 5px 20px; }
-    .coaching-page .back-large .summary h2 {
-      font-weight: 400;
-      font-size: 1.35em;
-      margin-top: 14px;
-      color: #222;
-      line-height: 160%;
-      color: #316B7E; }
-    .coaching-page .back-large .summary .buttons {
-      text-align: center; }
-    .coaching-page .back-large .summary .btn-default {
-      font-family: 'Muli', sans-serif;
-      font-weight: 500;
-      font-size: 22px;
-      color: #345;
-      padding: 8px 17px;
-      min-width: 125px;
-      border: none;
-      margin: 20px 17px 0; }
+  background: linear-gradient(45deg, rgba(34, 144, 175, 0.3), rgba(91, 198, 207, 0.3));
+}
+.coaching-page .back-large .img {
+  width: 97%;
+  text-align: center;
+  margin-top: 10px;
+}
+.coaching-page .back-large .summary {
+  padding: 5px 20px;
+}
+.coaching-page .back-large .summary h2 {
+  font-weight: 400;
+  font-size: 1.35em;
+  margin-top: 14px;
+  color: #222;
+  line-height: 160%;
+  color: #316B7E;
+}
+.coaching-page .back-large .summary .buttons {
+  text-align: center;
+}
+.coaching-page .back-large .summary .btn-default {
+  font-family: 'Muli', sans-serif;
+  font-weight: 500;
+  font-size: 22px;
+  color: #345;
+  padding: 8px 17px;
+  min-width: 125px;
+  border: none;
+  margin: 20px 17px 0;
+}
 .coaching-page .items {
   padding: 30px 0 30px 0;
   background: url("/assets/front_page/patterns/project_papper_24.png");
-  box-shadow: -1px -1px 1px rgba(50, 50, 50, 0.1); }
+  box-shadow: -1px -1px 1px rgba(50, 50, 50, 0.1);
+}
 .coaching-page .item {
-  padding: 20px 24px; }
-  .coaching-page .item img {
-    height: 85px; }
-  .coaching-page .item h2 {
-    font-size: 1.4em;
-    color: #333; }
-  .coaching-page .item p {
-    font-size: 14px;
-    line-height: 20px;
-    color: #66; }
+  padding: 20px 24px;
+}
+.coaching-page .item img {
+  height: 85px;
+}
+.coaching-page .item h2 {
+  font-size: 1.4em;
+  color: #333;
+}
+.coaching-page .item p {
+  font-size: 14px;
+  line-height: 20px;
+  color: #66;
+}
 
 .coaching-info-page .sidebar-image img {
-  margin-top: 36px; }
+  margin-top: 36px;
+}
 .coaching-info-page .btn-primary {
   font-family: 'Muli', sans-serif;
   font-weight: 500;
   font-size: 22px;
   padding: 8px 17px;
   border: none;
-  margin: 32px 17px 18px; }
+  margin: 32px 17px 18px;
+}
+
+.research-page .items {
+  padding: 30px 0 30px 0;
+  background: url("/assets/front_page/patterns/project_papper_24.png");
+  box-shadow: -1px -1px 1px rgba(50, 50, 50, 0.1);
+}
+.research-page .item {
+  padding: 20px 24px;
+}
+.research-page .item img {
+  height: 85px;
+}
+.research-page .item h2 {
+  font-size: 1.4em;
+  color: #333;
+}
+.research-page .item p {
+  font-size: 14px;
+  line-height: 20px;
+  color: #66;
+}
+
