--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav nav-pills pull-right">
         <li class="a1"><a href="/coaching/overview">Coaching</a></li>
-        <li class="a2"><a href="/research">Research</a></li>
+        <li class="a2"><a href="/research/overview">Research</a></li>
 
         <li class="dropdown a3" class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Supporters<b class="caret"></b></a>
